--- a/src/components/rootLayout/header/Header.module.css
+++ b/src/components/rootLayout/header/Header.module.css
@@ -29,9 +29,13 @@
 }
 
 .moreDiv {
+  width: 20%;
+  /* border: 1px solid black; */
   display: flex;
+  justify-content: space-between;
   align-items: center;
   margin-left: auto;
+  margin-right: 5%;
 }
 
 @media (max-width: 768px) {
@@ -66,8 +70,11 @@
   }
 
   .moreDiv {
+    margin-right: 5%;
+    width: 50%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    /* border: 1px solid; */
   }
 }
